--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.ai.navigation": "1.1.5",
+    "com.unity.autolod": "https://github.com/Unity-Technologies/AutoLOD.git",
     "com.unity.cinemachine": "2.9.7",
     "com.unity.collab-proxy": "2.5.1",
     "com.unity.connect.share": "4.2.3",
@@ -14,6 +15,7 @@
     "com.unity.timeline": "1.7.6",
     "com.unity.toonshader": "0.10.2-preview",
     "com.unity.ugui": "1.0.0",
+    "com.whinarn.unitymeshsimplifier": "https://github.com/Whinarn/UnityMeshSimplifier.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
