Week 9 folder gitignore (not working?)

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
+/[Aa]ssets/Projects/Week 9
+/Assets/Projects/Week 9/High Poly Models
+
 /[Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
@@ -70,5 +73,5 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
-
-/[Aa]ssets/Projects/Week 9
+/Assets/Projects/Week 9
+/Assets/Projects/Week 9
