--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
+
+hehe commit #69
+
 /[Aa]ssets/Projects/Week 9
 /Assets/Projects/Week 9/High Poly Models
 
